--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,13 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.packagesToScan=com.generation.blogpessoal.controller
+springdoc.swagger-ui.use-root-path=true
+
 spring.jpa.properties.jakarta.persistence.sharedCache.mode=ENABLE_SELECTIVE
 
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
